fix: Resolve JavaScript syntax error in template literal
- Fix malformed template literal in showQuarterlyModal function (lines 1740-1743)
- Remove duplicate closing template literal that caused 'Unexpected token <' error
- Website now loads properly without JavaScript syntax errors
- Quarterly slide functionality is now accessible and ready for testing

The quarterly tab functionality should now work when users click on Q1, Q2, Q3, or Q4 tabs.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,21 +1,21 @@
 [supervisord]
 nodaemon=false
-logfile=/tmp/law-watch/supervisord.log
-pidfile=/tmp/law-watch/supervisord.pid
+logfile=/home/user/webapp/supervisord.log
+pidfile=/home/user/webapp/supervisord.pid
 
 [unix_http_server]
-file=/tmp/law-watch/supervisor.sock
+file=/home/user/webapp/supervisor.sock
 
 [supervisorctl]
-serverurl=unix:///tmp/law-watch/supervisor.sock
+serverurl=unix:///home/user/webapp/supervisor.sock
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:webserver]
-command=python3 -m http.server 8001
-directory=/tmp/law-watch/docs
+command=python3 /home/user/webapp/web_server.py
+directory=/home/user/webapp
 autostart=true
 autorestart=true
-stdout_logfile=/tmp/law-watch/webserver.log
-stderr_logfile=/tmp/law-watch/webserver_error.log
+stdout_logfile=/home/user/webapp/webserver.log
+stderr_logfile=/home/user/webapp/webserver_error.log
