Implement modern redesign for job category tab
- New gradient header with description
- Modern filter pills with glassmorphism effect
- Enhanced chart card with statistics
- Redesigned law list cards with hover effects
- Added category tags to law items
- Improved search bar design
- Added statistics cards (total laws, filtered results)
- Better color scheme and animations
- Responsive grid layout

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,8 @@
-# Supervisor logs and process files
-supervisord.log
-supervisord.pid
-lawwatch.log
-lawwatch_error.log
-
-# Temporary backup files
-*_backup.*
-*_temp.*
-*_simple.*
-*_corrected.*
-
-# System files
+node_modules/
+*.log
+.env
 .DS_Store
-Thumbs.db
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
+capture_screenshot.js
+current_job_tab.png
+*.png
+package-lock.json
