--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -2,20 +2,20 @@
   "name": "RegRader 법령 모니터링",
   "short_name": "RegRader",
   "description": "2025년 법령 개정 모니터링 대시보드",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#667eea",
   "background_color": "#ffffff",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "./icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
