--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "puppeteer": "^24.17.1"
+    "puppeteer": "^24.17.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "pm2": "^6.0.10"
